--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -18,10 +18,10 @@ spec:
     spec:
       containers:
       - name: quoterxp
-        image: hhmbroekman/student-app:latest
+        image: 539731/student-app:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 5000
       imagePullSecrets:
-        - name: regcred
+        - name: my-registry-secret
          
