--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,21 +1,22 @@
 name: CI/CD
 
-on: push
+on:
+  push:
+    branches: [ "main" ] # Deze regel zorgt ervoor dat de pipeline alleen op de main branch draait
 
 jobs:
-  
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_LOGIN }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -26,36 +27,37 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            539731/student-app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/student-app:latest
+
   test:
     name: Test
-    needs: [ scan ]
+    needs: [ build ] # <-- AANGEPAST: Wacht tot de 'build' job klaar is
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_LOGIN }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: test 
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Run container and perform a basic test
         run: |
-          docker run -d -p 80:5000 539731/student-app:latest
+          docker run -d --name student-app-test -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/student-app:latest
           sleep 10s
-          curl http://localhost
-          docker ps -aq | xargs docker stop | xargs docker rm
+          curl http://localhost:8080
+          docker stop student-app-test
 
   deploy:
     name: Deploy
-    needs: [ test ]
+    needs: [ test ] # <-- CORRECT: Wacht tot de 'test' job klaar is
     runs-on: self-hosted
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
-      - run: |
-              sudo kubectl delete deployment --all              
-              sudo kubectl apply -f ${{ github.workspace }}/kubernetes/deployment.yaml --force
-              sudo kubectl apply -f ${{ github.workspace }}/kubernetes/nginx-service.yaml --force
+      - name: Deploy to Kubernetes
+        run: |
+          sudo k3s kubectl apply -f ${{ github.workspace }}/kubernetes/deployment.yaml
+          sudo k3s kubectl apply -f ${{ github.workspace }}/kubernetes/nginx-service.yaml
