--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
 
   test:
     name: Test
-    needs: [ build ] # <-- AANGEPAST: Wacht tot de 'build' job klaar is
+    needs: [ build ] # <-- Wacht tot de 'build' job klaar is
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
@@ -46,13 +46,27 @@ jobs:
       - name: Run container and perform a basic test
         run: |
           docker run -d --name student-app-test -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/student-app:latest
-          sleep 10s
+          
+          # Wacht tot de applicatie reageert (health check)
+          echo "Wachten op de applicatie..."
+          timeout=60
+          while ! curl -s --fail http://localhost:8080 > /dev/null; do
+            timeout=$((timeout - 5))
+            if [ $timeout -le 0 ]; then
+              echo "Applicatie startte niet op tijd."
+              docker logs student-app-test
+              exit 1
+            fi
+            sleep 5
+          done
+          
+          echo "Applicatie is online! Test wordt uitgevoerd."
           curl http://localhost:8080
           docker stop student-app-test
 
   deploy:
     name: Deploy
-    needs: [ test ] # <-- CORRECT: Wacht tot de 'test' job klaar is
+    needs: [ test ] # <-- Wacht tot de 'test' job klaar is
     runs-on: self-hosted
     steps:
       - name: Checkout source code
@@ -61,3 +75,4 @@ jobs:
         run: |
           sudo k3s kubectl apply -f ${{ github.workspace }}/kubernetes/deployment.yaml
           sudo k3s kubectl apply -f ${{ github.workspace }}/kubernetes/nginx-service.yaml
+
